--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,9 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 SUPABASE_URL=your-supabase-url
 SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
-# File Upload
+# File Upload (local fallback for existing /uploads/* URLs)
 UPLOAD_DIR=./uploads
 MAX_FILE_SIZE=10485760
+
+# Supabase Storage (optional; default bucket is "uploads")
+# SUPABASE_STORAGE_BUCKET=uploads
