feat(backend): lightweight image resize and compression before upload
- Add sharp and imageProcessing service (resize max 1920px, quality 85)
- processImage strips metadata and re-encodes; fallback to original on error
- All five upload handlers run processImage before uploadImage
- Optional env: IMAGE_MAX_DIMENSION, IMAGE_JPEG_QUALITY, IMAGE_WEBP_QUALITY, IMAGE_PNG_COMPRESSION

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,9 @@ MAX_FILE_SIZE=10485760
 
 # Supabase Storage (optional; default bucket is "uploads")
 # SUPABASE_STORAGE_BUCKET=uploads
+
+# Image processing before upload (optional)
+# IMAGE_MAX_DIMENSION=1920
+# IMAGE_JPEG_QUALITY=85
+# IMAGE_WEBP_QUALITY=85
+# IMAGE_PNG_COMPRESSION=6
